--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -19,7 +19,7 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 ### xxl-job, datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?Unicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root_pwd
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
@@ -44,3 +44,7 @@ xxl.job.accessToken=
 
 ### xxl-job, i18n (default empty as chinese, "en" as english)
 xxl.job.i18n=
+
+### log
+log.path=/Users/huangzhe/work/yoyosys/xxl-job/log/xxl-job/xxl-job-admin.log
+log.level=info
