--- a/xxl-job-executor-samples/xxl-job-executor-sample-springboot/src/main/resources/application.properties
+++ b/xxl-job-executor-samples/xxl-job-executor-sample-springboot/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 
 # log config
-logging.config=classpath:logback.xml
+#logging.config=classpath:logback.xml
 
 
 ### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
@@ -17,6 +17,9 @@ xxl.job.executor.port=9999
 xxl.job.accessToken=
 
 ### xxl-job log path
-xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
+xxl.job.executor.logpath=/Users/huangzhe/work/yoyosys/xxl-job/log/xxl-job/jobhandler
 ### xxl-job log retention days
 xxl.job.executor.logretentiondays=-1
+
+log.path=/Users/huangzhe/work/yoyosys/xxl-job/log/xxl-job/xxl-job-executor-sample-springboot.log
+log.level=info
